WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
127293
Bindings generation tests hit an error trying to include wtf/Platform.h after
r161638
https://bugs.webkit.org/show_bug.cgi?id=127293
Summary
Bindings generation tests hit an error trying to include wtf/Platform.h after...
Alexey Proskuryakov
Reported
2014-01-20 09:04:45 PST
<
http://trac.webkit.org/changeset/161638
> added an include of wtf/Platform.h in Source/WebCore/bindings/objc/PublicDOMInterfaces.h, which makes bindings test hit an error: WebCore/bindings/objc/PublicDOMInterfaces.h:29:10: fatal error: 'wtf/Platform.h' file not found #include <wtf/Platform.h> ^ 1 error generated. See e.g. <
https://webkit-queues.appspot.com/results/5638167180869632
>.
Attachments
Patch
(2.09 KB, patch)
2014-01-23 12:34 PST
,
Daniel Bates
ap
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Alexey Proskuryakov
Comment 1
2014-01-22 09:45:43 PST
Daniel, you added this line recently, could you please look into why this broke bindings tests?
Daniel Bates
Comment 2
2014-01-23 12:34:52 PST
Created
attachment 222016
[details]
Patch
WebKit Commit Bot
Comment 3
2014-01-23 12:36:58 PST
Please wait for approval from
timothy@apple.com
(or another member of the Apple Safari Team) before submitting because this patch contains changes to the Apple Mac WebKit.framework public API.
Daniel Bates
Comment 4
2014-01-24 09:45:56 PST
Committed
r162704
: <
http://trac.webkit.org/changeset/162704
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug