Bindings generation tests hit an error trying to include wtf/Platform.h after r161638 https://bugs.webkit.org/show_bug.cgi?id=127293

Reviewed by Alexey Proskuryakov.

Include TargetConditionals.h instead of wtf/Platform.h as the latter isn't available
in the public SDK.

As a side effect of this change, replace usage of PLATFORM(IOS) with TARGET_OS_IPHONE.

* bindings/objc/PublicDOMInterfaces.h:

Canonical link: https://commits.webkit.org/145573@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@162704 268f45cc-cd09-0410-ab3c-d52691b4dbfc